--- a/st-0.9.2/README
+++ b/st-0.9.2/README
@@ -7,6 +7,11 @@ Requirements
 ------------
 In order to build st you need the Xlib header files.
 
+```debian
+sudo apt update
+sudo apt install libx11-dev libxft-dev libxinerama-dev
+```
+
 
 Installation
 ------------
